# plenjos-desktop

./: com.plenjos.Desktop.json  meson.build
data/: com.plenjos.Desktop.appdata.xml.in  com.plenjos.Desktop.desktop.in  com.plenjos.Desktop.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: desktop-window.c  desktop-window.h  desktop-window.ui  desktop-window.ui~  desktop.gresource.xml  main.c  meson.build
